OOB: fix issue with branded logo getting cropped because of height too small (from 50 to 62 to match navbar's height)

--- a/src/apps/auth/style/app.scss
+++ b/src/apps/auth/style/app.scss
@@ -76,7 +76,7 @@
 }
 #auth_app_container .logo {
 	width: 210px;
-	height: 50px;
+	height: 62px;
 	background: url('../img/kazoo-logo.svg');
 	background-repeat: no-repeat;
 	background-position: center;
